scripts/setup/kube-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: planner
  name: planner
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: planner
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: planner
    spec:
      containers:
      - image: gcr.io/planner-XX/planner
        imagePullPolicy: Always
        name: planner
