scripts/setup/kube-service.yml
apiVersion: v1
kind: Service
metadata:
  name: planner-service
spec:
  type: NodePort
  selector:
    app: planner
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
